unpackaged/main/default/objects/breadwinner_ns__BW_Invoice__c/breadwinner_ns__BW_Invoice__c.object-meta.xml
<CustomObject>
    <description>Invoices from your finance system synced into Salesforce through Breadwinner</description>
    <label>NetSuite Invoice</label>
    <nameField>
        <label>Invoice #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>