unpackaged/main/default/objects/breadwinner_ns__BW_Invoice__c/fields/breadwinner_ns__Amount_Credited__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Amount_Credited__c</fullName>
    <label>Amount Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>