unpackaged/main/default/objects/breadwinner_ns__BW_Invoice__c/fields/breadwinner_ns__AmountRemaining__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__AmountRemaining__c</fullName>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>