unpackaged/main/default/objects/breadwinner_ns__BW_Invoice__c/fields/breadwinner_ns__CreatedFromInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CreatedFromInternalId__c</fullName>
    <label>Created From Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>