unpackaged/main/default/objects/breadwinner_ns__BW_Invoice__c/fields/breadwinner_ns__DiscountItemInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__DiscountItemInternalId__c</fullName>
    <label>Discount Item InternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>