unpackaged/main/default/objects/breadwinner_ns__BW_Invoice__c/fields/breadwinner_ns__Flag__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Flag__c</fullName>
    <formula>IF(CONTAINS($User.UIThemeDisplayed,&#39;Theme4&#39;),IF(OR(breadwinner_ns__Invoice_Status__c=&#39;Paid In Full&#39;,breadwinner_ns__Status__c=&#39;Deposited&#39;),IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/Flags/green-flag.png&#39;,&#39;Paid/Deposited&#39;),
IF(OR(breadwinner_ns__Invoice_Status__c=&#39;Pending Approval&#39;,breadwinner_ns__Status__c=&#39;Unapproved Payment&#39;),IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/pencil.png&#39;, &#39;Pending Approval&#39;),IF(OR(breadwinner_ns__Invoice_Status__c=&#39;Rejected&#39;,breadwinner_ns__Invoice_Status__c=&#39;Deleted&#39;),
IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/x-ltng.png&#39;,&#39;Rejected/Deleted&#39;),IF(CONTAINS(breadwinner_ns__Invoice_Status__c, &#39;Overdue&#39;),IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/Flags/red-flag.png&#39;, &#39;Overdue&#39;),IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/Flags/yellow-flag.png&#39;, &#39;Due/Not Deposited&#39;))))),
IF(OR(breadwinner_ns__Invoice_Status__c=&#39;Paid In Full&#39;,breadwinner_ns__Status__c=&#39;Deposited&#39;), 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Paid/Deposited&quot;,16,16),
IF(OR(breadwinner_ns__Invoice_Status__c=&#39;Pending Approval&#39;,breadwinner_ns__Status__c=&#39;Unapproved Payment&#39;),IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/pencil.png&#39;,&#39;Pending Approval&#39;,16,16),
IF(OR(breadwinner_ns__Invoice_Status__c=&#39;Rejected&#39;,breadwinner_ns__Invoice_Status__c=&#39;Deleted&#39;),
IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/x-cls.png&#39;,&#39;Rejected/Deleted&#39;,16,16),
IF(CONTAINS(breadwinner_ns__Invoice_Status__c, &#39;Overdue&#39;),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Overdue&quot;,16,16),IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Due/Not Deposited&quot;,16,16))))))</formula>
    <label>Flag</label>
    <type>Text</type>
</CustomField>