unpackaged/main/default/objects/breadwinner_ns__BW_Invoice__c/fields/breadwinner_ns__OtherRefNum__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__OtherRefNum__c</fullName>
    <label>PO/Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>