unpackaged/main/default/objects/breadwinner_ns__BW_Invoice__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>NetSuite Invoices</relationshipLabel>
    <relationshipName>NetSuite_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>