unpackaged/main/default/objects/breadwinner_ns__BW_Invoice__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>NetSuite Invoices</relationshipLabel>
    <relationshipName>NetSuite_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>