unpackaged/main/default/objects/breadwinner_ns__BW_Invoice__c/fields/View_in_Stripe__c.field-meta.xml
<CustomField>
    <fullName>View_in_Stripe__c</fullName>
    <formula>IF(
  ISBLANK(Stripe_Invoice_ID_Compiled__c),
  &quot;Not found&quot;,
  IF(
    ISBLANK(ncf_body_mhi_stripe_invoicenum__c),
    HYPERLINK(&quot;https://dashboard.stripe.com/invoices/&quot;&amp;Stripe_Invoice_ID_Compiled__c,&quot;Link&quot;,&quot;_blank&quot;),
    HYPERLINK(&quot;https://dashboard.stripe.com/invoices/&quot;&amp;Stripe_Invoice_ID_Compiled__c,ncf_body_mhi_stripe_invoicenum__c,&quot;_blank&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View in Stripe</label>
    <type>Text</type>
</CustomField>