unpackaged/main/default/objects/breadwinner_ns__BW_Invoice__c/listViews/breadwinner_ns__NetSuite_Invoices.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Invoices</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__Flag__c</columns>
    <columns>breadwinner_ns__Invoice_Status__c</columns>
    <columns>breadwinner_ns__TranDate__c</columns>
    <columns>breadwinner_ns__DueDate__c</columns>
    <columns>breadwinner_ns__Entity__c</columns>
    <columns>breadwinner_ns__Salesforce_Account__c</columns>
    <columns>breadwinner_ns__CurrencyName__c</columns>
    <columns>breadwinner_ns__AmountPaid__c</columns>
    <columns>breadwinner_ns__Amount_Credited__c</columns>
    <columns>breadwinner_ns__AmountRemaining__c</columns>
    <columns>breadwinner_ns__Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_ns__NS_Object_Type__c</field>
        <operation>notEqual</operation>
        <value>CashSale</value>
    </filters>
    <label>NetSuite Invoices</label>
</ListView>